# sweep-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  justfile
.github/workflows/: rust.yml
benches/: scorer.rs
chronicler/: Cargo.toml  README.md  build.rs
chronicler-cli/: Cargo.toml
chronicler-cli/src/: history.rs  main.rs  navigator.rs  utils.rs  walk.rs
chronicler/scripts/: bash-integration.sh  setup.sh
chronicler/src/: history.rs  icons.json  main.rs  navigator.rs  utils.rs  walk.rs
examples/: basic.rs
resources/: demo.cast
scripts/: bash_history.py  demo.py  path_history.py  pyproject.toml  rpc.py  sweep.py  sweep_kitty.py  sweep_rpc.py  tests.py
src/: candidate.rs  icons.json  lib.rs  main.rs  rank.rs  rpc.rs  rpc_async.rs  score.rs  scorer.rs  sweep.rs  widgets.rs
sweep/: Cargo.toml  build.rs  debug.py  pyproject.toml
sweep-cli/: Cargo.toml
sweep-cli/src/: main.rs
sweep-lib/: Cargo.toml
sweep-lib/benches/: scorer.rs
sweep-lib/examples/: basic.rs  simple.rs
sweep-lib/src/: candidate.rs  common.rs  haystack.rs  icons.json  lib.rs  rank.rs  rpc.rs  scorer.rs  sweep.rs  widgets.rs
sweep-py/: debug.py  pyproject.toml
sweep-py/sweep/: sweep.py  test.py
sweep-py/sweep/apps/: __init__.py  bash_history.py  demo.py  kitty.py  launcher.py  mpd.py  path_history.py
sweep/examples/: basic.rs
sweep/scripts/: bash_history.py  demo.py  path_history.py  sweep.py  sweep_kitty.py  test.py
sweep/src/: candidate.rs  common.rs  icons.json  lib.rs  main.rs  rank.rs  rpc.rs  scorer.rs  sweep.rs  widgets.rs
sweep/sweep/: __init__.py  __main__.py  sweep.py  test.py
sweep/sweep/apps/: __init__.py  bash_history.py  demo.py  kitty.py  launcher.py  mpd.py  path_history.py
