[package]
name = "chronicler-cli"
build = "build.rs"
authors.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true

[[bin]]
name = "chronicler"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
argh = { workspace = true }
futures = { workspace = true }
mimalloc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sweep = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

async-trait = "^0.1"
dirs = "^6.0"
globset = "^0.4"
sqlx = { version = "^0.8", features = ["runtime-tokio", "sqlite"] }
time = { version = "^0.3", features = ["macros"] }
tokio-stream = { version = "0.1.16", features = ["fs"] }
tracing-appender = "^0.2"
unix_mode = "^0.1"
uzers = "^0.12"
