[package]
name = "chronicler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1.0"
futures = "^0.3"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "^0.6", features = ["runtime-tokio-rustls", "sqlite"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
sweep = { path = "../" }
tracing-appender = "0.2.2"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
argh = "0.1.9"
tokio-stream = { version = "0.1.10", features = ["fs"] }
mimalloc = { version = "^0.1", default-features = false }
dirs = "4.0.0"
lazy_static = "1.4.0"
