[package]
name = "chronicler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1.0"
argh = "0.1.9"
dirs = "5.0"
futures = "^0.3"
lazy_static = "1.4.0"
mimalloc = { version = "^0.1", default-features = false }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
sqlx = { version = "^0.7", features = ["runtime-tokio-rustls", "sqlite"] }
sweep = { path = "../sweep" }
time = { version = "^0.3", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.10", features = ["fs"] }
tracing = "0.1.36"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.15"
