[package]
name = "chronicler"
build = "build.rs"
authors.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
argh = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
mimalloc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

async-trait = "^0.1"
dirs = "5.0"
globset = "^0.4"
sqlx = { version = "^0.8", features = ["runtime-tokio", "sqlite"] }
sweep = { path = "../sweep" }
time = { version = "^0.3", features = ["macros"] }
tokio-stream = { version = "0.1.10", features = ["fs"] }
tracing-appender = "^0.2"
unix_mode = "^0.1"
uzers = "^0.12"
