[package]
name = "sweep-cli"
build = "build.rs"
authors.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true

[[bin]]
name = "sweep"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
argh = { workspace = true }
futures = { workspace = true }
mimalloc = { workspace = true }
serde_json = { workspace = true }
surf_n_term = { workspace = true }
sweep = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
