[project]
name = "sweep"
version = "0.1.0"
description = "RPC binding to sweep binary"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.pyright]
typeCheckingMode = "strict"
reportAny = false

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ANN", "UP"]
ignore = ["ANN102", "ANN101", "ANN204", "ANN401", "UP038"]
