[package]
authors = ["Pavel Aslanov <asl.pavel@gmail.com>"]
build = "build.rs"
edition = "2021"
name = "sweep"
version = "0.11.2"
include = ["**/*.rs", "src/icons.json", "Cargo.toml", "Cargo.lock", "README.md"]

[lib]
name = "sweep"
path = "src/lib.rs"

[[bin]]
name = "sweep"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0"
crossbeam-channel = "^0.5"
futures = "^0.3"
nix = "^0.26"
rayon = "^1.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "1", features = ["full"] }
tracing = "^0.1"
tracing-futures = "^0.2"
lazy_static = "^1.1"
mimalloc = { version = "^0.1", default-features = false }
smallvec = "1.9.0"

surf_n_term = "^0.8.0"
# surf_n_term = { path = "../../surf-n-term" }
# surf_n_term = { git = "https://github.com/aslpavel/surf-n-term.git" }

# main binary dependencies (TODO: use workspace)
argh = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }


[dev-dependencies]
criterion = "^0.5"

[[bench]]
harness = false
name = "scorer"
